# photo-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.py
docs/: CLASSIFIER-CONFIG.md  LOAD-TESTING.md  POSTGRES-SETUP.md
notebooks/: models.ipynb
scripts/: env.sh  migrate.py  run.py
scripts/cleanup/: backfill_predictions.py  clean_db.py  migrate.py
scripts/models/: download.py  finetune.py
scripts/tests/: create_test_users.py  run_load_tests.sh  run_test_app.sh
src/: app.py  auth.py  concurrency.py  config.py  db.py  logger.py  model.py  utils.py
src/templates/: gallery.html  index.html  login.html  register.html  upload.html
tests/load_tests/: locustfile.py
