[project]
name = "photo-server"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.27",
    "python-dotenv>=1.1.0",
    "starlette>=0.49.1",
    "itsdangerous>=2.2.0",
    "Jinja2>=3.1.6",
    "psycopg[binary]>=3.3.4",
    "argon2-cffi>=25.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "ty>=0.0.35",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
