[project]
name = "photo-server"
version = "0.2.2"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.27",
    "python-dotenv>=1.2.2",
    "starlette>=0.49.1",
    "itsdangerous>=2.2.0",
    "Jinja2>=3.1.6",
    "psycopg[binary,pool]>=3.3.4",
    "argon2-cffi>=25.1.0",
    "virtualenv>=20.36.2", # because of security issues in earlier versions
]

[dependency-groups]
dev = [
    "locust>=2.44.3",
    "pre-commit>=4.5.0",
    "ty>=0.0.35",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
