[project]
name = "photo-server"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.27",
    "python-dotenv>=1.2.2",
    "Jinja2>=3.1.6",
    "psycopg[binary,pool]>=3.3.4",
    "virtualenv>=20.36.2", # because of security issues in earlier versions
    "transformers>=5.12.1",
    "pillow>=12.2.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "locust>=2.44.3",
    "pre-commit>=4.5.0",
    "ty>=0.0.35",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
